(lang dune 3.19)
(using menhir 3.0)
(name bincaml)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name <author@example.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(formatting
 (enabled_for dune))

(license Apache-2.0)

(documentation https://url/to/documentation)

(package
 (name bincaml)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends
   menhir
   ocaml
   zarith
   fix
   trace
   trace-tef
   containers
   iter
   containers-data
   ppx_deriving
   ocamlgraph
   intPQueue
   cmdliner
   (ocamlformat :with-dev-setup)
   (sherlodoc :with-doc)
   (ppx_expect_nobase (>= "0.17.2.2"))
   (alcotest :with-test)
   (qcheck-core :with-test)
   (qcheck-alcotest :with-test)
   )
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
