(library
 (public_name bincaml.loader)
 (name loader)
 (flags -w -27)
 (modules loadir)
 (libraries
  pp_loc
  BasilIR
  lang
  bincaml.ast
  bincaml.util
  zarith
  iter
  trace.core))

(library
 (public_name bincaml)
 (flags -w -27)
 (modules passes)
 (libraries
  loader
  containers.pp
  pp_loc
  BasilIR
  lang
  transforms
  bincaml.ast
  trace.core))

(documentation
 (package bincaml))
