(library
 (public_name bincaml.analysis)
 (name analysis)
 (flags -w -27)
 (modules dataflow_graph intra_analysis defuse_bool lattice_types known_bits)
 (libraries
  patricia-tree
  loader
  intPQueue
  lang
  zarith
  fix
  ocamlgraph
  containers
  containers-data
  iter
  containers.pp
  trace.core)
 (inline_tests)
 (preprocess
  (pps
   ppx_deriving.show
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_deriving.map
   ppx_deriving.iter
   ppx_deriving.fold
   ppx_deriving.enum
   ppx_expect_nobase)))
