(library
 (name BasilIR)
 (public_name bincaml.basilir)
 (modules
  AbsBasilIR
  BNFC_Util
  PrintBasilIR
  showBasilIR
  SkelBasilIR
  LexBasilIR
  ParBasilIR)
 (flags
  (-w -27 -w -39 -w -33)))

(ocamllex LexBasilIR)

(menhir
 (modules ParBasilIR))

(rule
 (deps BasilIR.cf)
 ; can ignore -s or --ignore-promoted-rules
 ; we disable it whenever binary is missing for compatability with CI tools
 (enabled_if %{bin-available:bnfc})
 (targets
  AbsBasilIR.ml
  BNFC_Util.ml
  PrintBasilIR.ml
  ShowBasilIR.ml
  SkelBasilIR.ml
  TestBasilIR.ml
  LexBasilIR.mll
  ParBasilIR.mly)
 (mode promote)
 (action
  (run bnfc --ocaml-menhir -o . BasilIR.cf)))
