(library
 (public_name bincaml.transforms)
 (name transforms)
 (flags -w -27)
 (modules
  ssa
  algsimp
  cf_tx
  spec_modifies
  livevars
  cleanup_cfg
  ide
  may_read_uninit)
 (libraries
  bincaml.analysis
  patricia-tree
  loader
  intPQueue
  lang
  zarith
  fix
  ocamlgraph
  containers
  containers-data
  iter
  containers.pp
  trace.core
  bincaml.util)
 (inline_tests)
 (preprocess
  (pps
   ppx_deriving.show
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_deriving.map
   ppx_deriving.iter
   ppx_deriving.fold
   ppx_deriving.enum
   ppx_expect_nobase)))
